# whispery

./: README.md  RELEASE_PROCESS.md  package-lock.json  package.json
.cursor/commands/: tag-release.md
.github/workflows/: release.yml
scripts/: release-prep.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  transcribe.rs  transform.rs
src/lib/: stores.ts
src/lib/components/: ApiSettings.svelte  AudioSettings.svelte  GlossarySettings.svelte  PromptManager.svelte
src/routes/: +layout.svelte
src/routes/(app)/: +page.svelte
src/routes/overlay/: +layout.svelte  +page.svelte
